# python_web_GoIT_project

./: .env_example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/source/: conf.py
migration/: env.py
migration/versions/: 0d65ecc60b28_init.py  197fda1bbd91_fix_id_tag.py  3725c982d3b3_add_rating_count.py  3a0579407bb2_add_rating.py  a2cca2e207e5_add_role_user.py  b18b0733f2df_image_ratings.py  c0f72961dc16_create_blacklist_table.py
src/conf/: config.py  messages.py  transform.py
src/database/: db.py
src/models/: models.py
src/repository/: admin.py  comments.py  images.py  rating.py  ratings.py  tags.py  transform.py  users.py
src/routes/: admin.py  auth.py  comments.py  images.py  rating.py  transform.py  users.py
src/schemas/: admin.py  comments.py  image.py  rating.py  transform.py  user.py  users.py
src/services/: auth.py  email.py  role.py  roles.py
src/services/templates/: email_template.html  password_template.html  reset_password.html
src/utils/: utils.py
