[tool.poetry]
name = "python-web-goit-project"
version = "0.1.0"
description = ""
authors = ["SergRusetskiy1974 <113336060+rusetskiy1974@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["email"], version = "^0.110.2"}
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
asyncpg = "^0.29.0"
fastapi-mail = "^1.4.1"
cloudinary = "^1.40.0"
passlib = "^1.7.4"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
